# Android-Notepad

./: .gitignore  README.md  in.bat
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/server/: editor.js  index.html
app/src/main/cpp/: CMakeLists.txt  main.c  mjson.h  utils.h
app/src/main/java/euphoria/psycho/notepad/: AndroidContext.java  AndroidServices.java  App.java  BaseActivity.java  C.java  Constants.java  Databases.java  EditNoteActivity.java  EditTextUtils.java  Fomatter.java  HttpGet.java  MD5.java  MainActivity.java  NativeMethods.java  Note.java  NoteAdapter.java  SharedUtils.java  StringUtils.java  TextDrawUtils.java  ThreadUtils.java  TransApi.java  TranslateUtils.java  Utils.java  ViewActivity.java  ViewHolder.java  YoudaoUtils.java
app/src/main/java/euphoria/psycho/notepad/server/: DatabaseHelper.java  ServerActivity.java  ServerService.java  SimpleServer.java  Utils.java
app/src/main/java/euphoria/psycho/notepad/ui/: BottomBar.java
app/src/main/java/org/javia/arity/: ArityException.java  Complex.java  Constant.java  ContextFunction.java  DeclarationParser.java  IsComplexException.java  Profiler.java  RPN.java  Symbols.java  SyntaxException.java  Token.java  TokenConsumer.java
app/src/main/res/drawable/: btn.xml  btn_tint.xml
app/src/main/res/layout/: activity_editor.xml  activity_main.xml  activity_server.xml  activity_view.xml
app/src/main/res/menu/: action_mode.xml  bottom.xml  server.xml
app/src/main/res/values/: colors.xml  styles.xml
html/: app.js  index.html  layout.css  reset.css  toast.css  toast.js
